Added a intro page which launches when the extension is installed

--- a/public/intro.html
+++ b/public/intro.html
@@ -7,9 +7,8 @@
     <title>Lyst | Amazon Price Watcher</title>
 </head>
 <body>
-<noscript>
-    You need to enable JavaScript to run this app.
-</noscript>
-<div id="root"></div>
+    <div>
+        <h1>Intro page content goes here</h1>
+    </div>
 </body>
 </html>
