--- a/public/popup.html
+++ b/public/popup.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="favicon.ico">
     <title>Lyst | Amazon Price Watcher</title>
 </head>
 <body>
